--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!--Sobre-->
 
-    <div class="container" style="height: 500px;"> 
+    <div class="container mt-3" style="height: 400px; @media (min-width: 992px){text-bg-danger}"> 
         <div class="row">
             <div class="col-md-6 d-flex flex-column justify-content-center">
                 <h3>Olá, eu sou</h3>
@@ -57,7 +57,7 @@
                 <a class="btn btn-primary w-50" href="/sobre.html" role="button">Saiba mais</a>
             </div>
             <div class="col-md-6">
-                <img src="https://avatars.githubusercontent.com/u/65501165?v=4" class="img-fluid mx-auto d-block w-75" alt="...">
+                <img height="350" width="350" src="https://avatars.githubusercontent.com/u/65501165?v=4" class="img-fluid mx-auto d-block w-" alt="...">
             </div>
         </div>
     </div>
@@ -67,11 +67,11 @@
     <div class="container" style="height: 400px;">
         <div class="row">
             <div class="col-md-6">
-                <img src="assets/books.svg" class="img-fluid mx-auto d-block w-75" alt="...">
+                <img height="400" width="400" src="assets/books.svg" class="img-fluid mx-auto d-block" alt="...">
             </div>
-            <div class="col-md-6 d-flex flex-column align-items-end">
+            <div class="col-md-6 d-flex flex-column justify-content-center align-items-end">
                 <h1>Formação</h1>
-                <p>Desenvolvedor front-end Desenvolvedor front-endDesenvolvedor front-endv</p>
+                <p>Minha fomrção e o que estou estudando.</p>
                 <a class="btn btn-primary w-50" href="/formacao.html" role="button">Saiba mais</a>
             </div>
         </div>
@@ -79,9 +79,9 @@
 
     <div class="container" style="height: 400px;"> 
         <div class="row">
-            <div class="col-md-6 d-flex flex-column justify-content-center">
+            <div class="col-md-6 d-flex flex-column justify-content-center align-items-start">
                 <h1>Portfólio</h1>
-                <p>Desenvolvedor front-endDesenvolvedor front-endDesenvolvedor front-endDesenvolvedor front-end</p>
+                <p>Veja os projetos que estou desenvolvendo</p>
                 <a class="btn btn-primary w-50" href="/portifolio.html" role="button">Saiba mais</a>
             </div>
             <div class="col-md-6">
@@ -95,15 +95,15 @@
             <div class="col-md-6">
                 <img src="assets/personal_text.svg" class="img-fluid mx-auto d-block w-75" alt="...">
             </div>
-            <div class="col-md-6 d-flex flex-column align-items-end">
+            <div class="col-md-6 d-flex flex-column justify-content-center align-items-end">
                 <h1>Contato</h1>
-                <p>Desenvolvedor front-end Desenvolvedor front-endDesenvolvedor front-endDesenvolvedor front-end</p>
+                <p>Entre em contato comigo</p>
                 <a class="btn btn-primary w-50" href="/contato.html" role="button">Saiba mais</a>
             </div>
         </div>
     </div>
 
-    <div class="container" style="height: 200px;"> 
+    <div class="container border-top" style="height: 200px;"> 
         <div class="row">
             <div class="col-md-10">
                 <h1>Felipe Ferreira</h1>
