--- a/portifolio.html
+++ b/portifolio.html
@@ -46,9 +46,47 @@
         </nav>
     </div>
 
+
+
+    <div class="container border-top" style="height: 500px;"> 
+        <h1 class="text-center pb-3">Portfólio</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card bg-dark" style="width: 18rem;">
+                    <img src="/assets/netflix clone.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Clone da Netflix</h5>
+                      <p class="card-text">Clone da interface na Netiflix feito com React Js</p>
+                      <a href="https://github.com/FelipeFerreiraSS/netflix-clone-react" class="btn btn-primary">Ver projeto</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark" style="width: 18rem;">
+                    <img src="/assets/devfinance.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">dev.finances</h5>
+                      <p class="card-text">Interface de controle financeiro feito com HTML, CSS e JS</p>
+                      <a href="https://github.com/FelipeFerreiraSS/dev.finances-maratona_discover" class="btn btn-primary">Ver projeto</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark" style="width: 18rem;">
+                    <img src="/assets/calculadorajs.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Calculadora</h5>
+                      <p class="card-text">Calculadora simples feita com HTML, CSS e JS</p>
+                      <a href="https://github.com/FelipeFerreiraSS/calculadora-javascript" class="btn btn-primary">Ver projeto</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
-    <div class="container" style="height: 200px;"> 
+
+    <div class="container border-top" style="height: 200px;"> 
         <div class="row">
             <div class="col-md-10">
                 <h1>Felipe Ferreira</h1>
