--- a/sobre.html
+++ b/sobre.html
@@ -46,9 +46,32 @@
         </nav>
     </div>
 
+
+
+    <div class="container" style="height: 500px;"> 
+        <h1 class="text-center pb-3">Sobre</h1>
+        <div class="row">
+            <div class="col-md-2">
+                <img src="https://avatars.githubusercontent.com/u/65501165?v=4" class="img-fluid mx-auto d-block " alt="...">
+            </div>
+            <div class="col-md-10 d-flex flex-column w-50">
+                <h1>Felipe Ferreira</h1>
+                <p class="mb-0">Olá, eu sou o Felipe, studante de ADS com foco em desenvovlvimento web. </p>
+                <p class="mb-0">Sempre gostos de aprender coisas novas sobre otras areas que não seja sobre programação.</p>
+                <p>Pra passar o tempo de jogar video game, assistir series e o meu principal roob é corrida</p>
+                <ul class="list-group list-group-horizontal">
+                    <a href="#" class="list-group-item text-bg-dark"><img height="32" width="32" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/linkedin.svg"/></a>
+                    <a href="#" class="list-group-item text-bg-dark"><img height="32" width="32" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg"/></a>
+                    <a href="#" class="list-group-item text-bg-dark"><img height="32" width="32" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/codepen.svg"/></a>
+                </ul>
+            </div>
+            
+        </div>
+    </div>
+
     
 
-    <div class="container" style="height: 200px;"> 
+    <div class="container border-top" style="height: 200px;"> 
         <div class="row">
             <div class="col-md-10">
                 <h1>Felipe Ferreira</h1>
