--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
 
     <!--Sobre-->
 
-    <div class="container mt-3" style="height: 400px; @media (min-width: 992px){text-bg-danger}"> 
+    <div class="container mt-3" style="height: 400px;"> 
         <div class="row">
             <div class="col-md-6 d-flex flex-column justify-content-center">
                 <h3>Olá, eu sou</h3>
                 <h1>Felipe Ferreira</h1>
-                <h3>Desenvolvedor front-end</h3>
-                <a class="btn btn-primary w-50" href="/sobre.html" role="button">Saiba mais</a>
+                <a class="btn btn-primary w-25" href="/sobre.html" role="button">Saiba mais</a>
             </div>
             <div class="col-md-6">
                 <img height="350" width="350" src="https://avatars.githubusercontent.com/u/65501165?v=4" class="img-fluid mx-auto d-block w-" alt="...">
@@ -71,8 +70,8 @@
             </div>
             <div class="col-md-6 d-flex flex-column justify-content-center align-items-end">
                 <h1>Formação</h1>
-                <p>Minha fomrção e o que estou estudando.</p>
-                <a class="btn btn-primary w-50" href="/formacao.html" role="button">Saiba mais</a>
+                <p>Minha formação e o que estou estudando.</p>
+                <a class="btn btn-primary w-25" href="/formacao.html" role="button">Saiba mais</a>
             </div>
         </div>
     </div>
@@ -82,7 +81,7 @@
             <div class="col-md-6 d-flex flex-column justify-content-center align-items-start">
                 <h1>Portfólio</h1>
                 <p>Veja os projetos que estou desenvolvendo</p>
-                <a class="btn btn-primary w-50" href="/portifolio.html" role="button">Saiba mais</a>
+                <a class="btn btn-primary w-25" href="/portifolio.html" role="button">Saiba mais</a>
             </div>
             <div class="col-md-6">
                 <img src="assets/image_upload.svg" class="img-fluid mx-auto d-block w-75" alt="...">
@@ -98,7 +97,7 @@
             <div class="col-md-6 d-flex flex-column justify-content-center align-items-end">
                 <h1>Contato</h1>
                 <p>Entre em contato comigo</p>
-                <a class="btn btn-primary w-50" href="/contato.html" role="button">Saiba mais</a>
+                <a class="btn btn-primary w-25" href="/contato.html" role="button">Saiba mais</a>
             </div>
         </div>
     </div>
