--- a/sobre.html
+++ b/sobre.html
@@ -56,13 +56,13 @@
             </div>
             <div class="col-md-10 d-flex flex-column w-50">
                 <h1>Felipe Ferreira</h1>
-                <p class="mb-0">Olá, eu sou o Felipe, studante de ADS com foco em desenvovlvimento web. </p>
-                <p class="mb-0">Sempre gostos de aprender coisas novas sobre otras areas que não seja sobre programação.</p>
-                <p>Pra passar o tempo de jogar video game, assistir series e o meu principal roob é corrida</p>
+                <p class="mb-0">Olá, eu sou o Felipe, estudante de ADS com foco em desenvolvimento web.</p>
+                <p class="mb-0">Sempre gostos de aprender coisas novas sobre outras áreas que não seja sobre programação.</p>
+                <p>No tempo livre gosto de jogar video game e assistir series. Meu hobby favorito é corrida.</p>
                 <ul class="list-group list-group-horizontal">
-                    <a href="#" class="list-group-item text-bg-dark"><img height="32" width="32" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/linkedin.svg"/></a>
-                    <a href="#" class="list-group-item text-bg-dark"><img height="32" width="32" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg"/></a>
-                    <a href="#" class="list-group-item text-bg-dark"><img height="32" width="32" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/codepen.svg"/></a>
+                    <a href="https://www.linkedin.com/in/felipeferreiradev/" class="list-group-item text-bg-dark"><img height="32" width="32" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/linkedin.svg"/></a>
+                    <a href="https://github.com/FelipeFerreiraSS" class="list-group-item text-bg-dark"><img height="32" width="32" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/github.svg"/></a>
+                    <a href="https://codepen.io/FelipeFerreira_ss" class="list-group-item text-bg-dark"><img height="32" width="32" src="https://cdn.jsdelivr.net/npm/simple-icons@v7/icons/codepen.svg"/></a>
                 </ul>
             </div>
             
