--- a/contato.html
+++ b/contato.html
@@ -49,7 +49,7 @@
 
     <div class="container-md d-flex flex-column align-items-center" style="height: 500px;"> 
         <h1>Contato</h1>
-        <h2>Me mande uma mensagem</h2>
+        <p>Me mande uma mensagem, que responderei o mais rápido possível.</p>
         
         <div class="mb-3 w-75">
             <label for="exampleFormControlInput1" class="form-label">Seu Nome</label>
