--- a/portifolio.html
+++ b/portifolio.html
@@ -48,7 +48,7 @@
 
 
 
-    <div class="container border-top" style="height: 500px;"> 
+    <div class="container" style="height: 500px;"> 
         <h1 class="text-center pb-3">Portfólio</h1>
         <div class="row">
             <div class="col-md-4">
@@ -56,7 +56,7 @@
                     <img src="/assets/netflix clone.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Clone da Netflix</h5>
-                      <p class="card-text">Clone da interface na Netiflix feito com React Js</p>
+                      <p class="card-text">Clone da interface na Netflix feito com React Js.</p>
                       <a href="https://github.com/FelipeFerreiraSS/netflix-clone-react" class="btn btn-primary">Ver projeto</a>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                     <img src="/assets/devfinance.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">dev.finances</h5>
-                      <p class="card-text">Interface de controle financeiro feito com HTML, CSS e JS</p>
+                      <p class="card-text">Interface de controle financeiro feito com HTML, CSS e JS.</p>
                       <a href="https://github.com/FelipeFerreiraSS/dev.finances-maratona_discover" class="btn btn-primary">Ver projeto</a>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                     <img src="/assets/calculadorajs.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Calculadora</h5>
-                      <p class="card-text">Calculadora simples feita com HTML, CSS e JS</p>
+                      <p class="card-text">Calculadora simples feita com HTML, CSS e JS.</p>
                       <a href="https://github.com/FelipeFerreiraSS/calculadora-javascript" class="btn btn-primary">Ver projeto</a>
                     </div>
                 </div>
