--- a/formacao.html
+++ b/formacao.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <!--Head do site com título, configurações e importação do Bootstrap-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Felipe Ferreira | Portfólio pessoal</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 </head>
 <body class="text-bg-dark">
-    <!--Header com barra de navegação-->
+    <!--Barra de navegação com todos os links do site-->
     <div class="container">
         <nav class="navbar navbar-expand-lg text-bg-dark">
             <a class="navbar-brand text-bg-dark" href="/"><h1>Felipe Ferreira</h1> </a>
@@ -46,12 +46,12 @@
         </nav>
     </div>
 
-    
+    <!--Formação com informações da minha graduação e linguagens de programação que tenho conhecimento-->
     <div class="container" style="height: 750px;">
         <h1 class="text-center">Formação</h1>
         <div class="row pt-4">
             <div class="col-md-6 d-flex flex-column">
-                <h1>Tecnologo</h1>
+                <h1>Tecnólogo</h1>
                 <p class="mb-0">Tecnólogo em Análise e Desenvolvimento de Sistemas pela escola Uninter.</p>
                 <p>Previsão para término 05/2023.</p>
             </div>
@@ -74,8 +74,7 @@
         </ul>
     </div>
 
-
-
+    <!--Footer, rodapé com todos os links do site-->
     <div class="container border-top" style="height: 200px;"> 
         <div class="row">
             <div class="col-md-10">
@@ -100,7 +99,8 @@
             </div>
         </div>
     </div>
-    
+
+    <!--Importação de Java Script do Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
