--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <!--Head do site com título, configurações e importação do Bootstrap-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Felipe Ferreira | Portfólio pessoal</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 </head>
 <body class="text-bg-dark">
-    <!--Header com barra de navegação-->
+    <!--Barra de navegação com todos os links do site-->
     <div class="container">
         <nav class="navbar navbar-expand-lg text-bg-dark">
             <a class="navbar-brand text-bg-dark" href="/"><h1>Felipe Ferreira</h1> </a>
@@ -46,8 +46,7 @@
         </nav>
     </div>
 
-    <!--Sobre-->
-
+    <!--Link para a página Sobre-->
     <div class="container mt-3" style="height: 400px;"> 
         <div class="row">
             <div class="col-md-6 d-flex flex-column justify-content-center">
@@ -62,7 +61,7 @@
     </div>
 
 
-    <!--Formação-->
+    <!--Link para a página Formação-->
     <div class="container" style="height: 400px;">
         <div class="row">
             <div class="col-md-6">
@@ -76,6 +75,7 @@
         </div>
     </div>
 
+    <!--Link para a página Portifólio-->
     <div class="container" style="height: 400px;"> 
         <div class="row">
             <div class="col-md-6 d-flex flex-column justify-content-center align-items-start">
@@ -89,6 +89,7 @@
         </div>
     </div>
 
+    <!--Link para a página Contato-->
     <div class="container" style="height: 400px;">
         <div class="row">
             <div class="col-md-6">
@@ -102,6 +103,7 @@
         </div>
     </div>
 
+    <!--Footer, rodapé com todos os links do site-->
     <div class="container border-top" style="height: 200px;"> 
         <div class="row">
             <div class="col-md-10">
@@ -127,6 +129,7 @@
         </div>
     </div>
     
+    <!--Importação de Java Script do Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
