--- a/portifolio.html
+++ b/portifolio.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <!--Head do site com título, configurações e importação do Bootstrap-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Felipe Ferreira | Portfólio pessoal</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
 </head>
 <body class="text-bg-dark">
-    <!--Header com barra de navegação-->
+    <!--Barra de navegação com todos os links do site-->
     <div class="container">
         <nav class="navbar navbar-expand-lg text-bg-dark">
             <a class="navbar-brand text-bg-dark" href="/"><h1>Felipe Ferreira</h1> </a>
@@ -46,46 +46,48 @@
         </nav>
     </div>
 
-
-
+    <!--Portfólio com links para alguns projetos que fiz-->
     <div class="container" style="height: 500px;"> 
         <h1 class="text-center pb-3">Portfólio</h1>
         <div class="row">
+
             <div class="col-md-4">
                 <div class="card bg-dark" style="width: 18rem;">
                     <img src="/assets/netflix clone.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Clone da Netflix</h5>
                       <p class="card-text">Clone da interface na Netflix feito com React Js.</p>
-                      <a href="https://github.com/FelipeFerreiraSS/netflix-clone-react" class="btn btn-primary">Ver projeto</a>
+                      <a href="https://github.com/FelipeFerreiraSS/netflix-clone-react" target="_blank" class="btn btn-primary">Ver projeto</a>
                     </div>
                 </div>
             </div>
+
             <div class="col-md-4">
                 <div class="card bg-dark" style="width: 18rem;">
                     <img src="/assets/devfinance.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">dev.finances</h5>
                       <p class="card-text">Interface de controle financeiro feito com HTML, CSS e JS.</p>
-                      <a href="https://github.com/FelipeFerreiraSS/dev.finances-maratona_discover" class="btn btn-primary">Ver projeto</a>
+                      <a href="https://github.com/FelipeFerreiraSS/dev.finances-maratona_discover" target="_blank" class="btn btn-primary">Ver projeto</a>
                     </div>
                 </div>
             </div>
+
             <div class="col-md-4">
                 <div class="card bg-dark" style="width: 18rem;">
                     <img src="/assets/calculadorajs.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Calculadora</h5>
                       <p class="card-text">Calculadora simples feita com HTML, CSS e JS.</p>
-                      <a href="https://github.com/FelipeFerreiraSS/calculadora-javascript" class="btn btn-primary">Ver projeto</a>
+                      <a href="https://github.com/FelipeFerreiraSS/calculadora-javascript" target="_blank" class="btn btn-primary">Ver projeto</a>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
-    
 
-
+    <!--Footer, rodapé com todos os links do site-->
     <div class="container border-top" style="height: 200px;"> 
         <div class="row">
             <div class="col-md-10">
@@ -111,6 +113,7 @@
         </div>
     </div>
     
+    <!--Importação de Java Script do Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
